--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="./">Home</a>
                 <a href="./about.html">About</a>
                 <a href="./contact.html">Contact</a>
-                <a href="./archive.html">Archive</a>
+                <a href="./final.html">Final Submission</a>
             </div>
         </div>
 
@@ -38,6 +38,10 @@
 
           <div id="title"><h1>Index</h1></div>
             <ul>
+    
+        <li>
+            <a href="./posts/2016-08-11-performance-analysis.html">Performance Analysis</a> - August 11, 2016
+        </li>
     
         <li>
             <a href="./posts/2016-07-26-dnns-on-gpus.html">Training Deep Neural Networks on GPUs</a> - July 26, 2016
