--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 <a href="./">Home</a>
                 <a href="./about.html">About</a>
                 <a href="./contact.html">Contact</a>
-                <a href="./archive.html">Archive</a>
+                <a href="./final.html">Final Submission</a>
             </div>
         </div>
 
