--- a/final.html
+++ b/final.html
@@ -44,7 +44,7 @@
 </ul>
 <p>In addition to that, the code includes a reference implementation used for the verification and testing as well as an OpenCL implementation that is still under development.</p>
 <h2 id="project-documentation">Project Documentation</h2>
-<p>So far, I have written five <a href="./archive.html">blog posts</a> describing the work progress during this summmer. Additional posts will follow in the coming weeks evaluating computational and classification performance of the neural network implementation. The final presentation made to the SFT group at CERN can be found <a href="./images/final.pdf">here</a>.</p>
+<p>So far, I have written five <a href="./archive.html">blog posts</a> describing the work progress during this summer. Additional posts will follow in the coming weeks evaluating computational and classification performance of the neural network implementation. The final presentation made to the SFT group at CERN can be found <a href="./images/final.pdf">here</a>.</p>
 <h2 id="commits">Commits</h2>
 <p>The main work is contained in the three branches, one for each of the architectures:</p>
 <ul>
